istio-configs/hotelReservation.yaml
#########################################################################
###
# Gateway/VirtualService for HotelReservation frontend
###
#########################################################################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hotelreservation-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
#########################################################################
###
# This config creates subsets based on clusters for the frontend,
# and does header-based route matching to the correct subset
# based on the x-lb-endpt header
###
#########################################################################

# DestinationRule for frontend, subsetting by label.
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: frontend-destination
  namespace: default
spec:
  host: frontend
  subsets:
  - name: frontend-0
    labels:
      statefulset.kubernetes.io/pod-name: frontend-0
  # - name: frontend-1
  #   labels:
  #     statefulset.kubernetes.io/pod-name: frontend-1
  # - name: frontend-2
  #   labels:
  #     statefulset.kubernetes.io/pod-name: frontend-2
---
# Subset routing: if x-lb-endpt is frontend-0, route to frontend-0, if frontend-1, route to frontend-1, if not set, random.
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hotelreservation
spec:
  hosts:
  - "*"
  gateways:
  - hotelreservation-gateway
  http:
  - match:
    - headers:
        x-lb-endpt:
          exact: frontend-0
    route:
    - destination:
        host: frontend
        subset: frontend-0
        port:
          number: 5000
  # - match:
  #   - headers:
  #       x-lb-endpt:
  #         exact: frontend-1
  #   route:
  #   - destination:
  #       host: frontend
  #       subset: frontend-1
  #       port:
  #         number: 5000
  # - match:
  #   - headers:
  #       x-lb-endpt:
  #         exact: frontend-2
  #   route:
  #   - destination:
  #       host: frontend
  #       subset: frontend-2
  #       port:
  #         number: 5000
  - route:
    - destination:
        host: frontend
        port:
          number: 5000
